# Diplomado_AprendizajeSupervisado

./: Entregable_Tarea_5_1_Alfaro_Cruz_Perez_Rupit_Medea.ipynb  pyproject.toml
.ipynb_checkpoints/: Entregable_Tarea_5_1_Alfaro_Cruz_Perez_Rupit_Medea-checkpoint.ipynb
